# Open4D

./: .gitignore
include/Open4D/: OFD_geometry.h
src/geometry/: OFD_mesh.c  OFD_tetrahedron.c
test/: CMakeLists.txt  main.c  renderer.c  renderer.h
